@@ -1,3 +1,13 @@
+2012-04-06  Srecko Morovic  <srecko.morovic@cern.ch>
+	* tag V01-00-04
+	* branching point before replacing HEAD with new AutoBU
+	* new script which waits for 
+	application transitions and does same sequence
+	as RCMS playback system, removed older START
+	* AutoBU improved to handle stop and halt transitions,
+	this requires new playback module,
+	EventFilter/PlaybackRawDataProvider V00-02-07
+
 2011-09-01  Andrei Spataru  <andrei.cristian.spataru@cern.ch>
 	* added START script and State.pm
 	* modification to initialize script to kill running xdaq
